--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PR53"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="PermDynamics" Height="450" Width="800"
+        MinHeight="450" MinWidth="800">
     <Grid>
-        
+        <Frame x:Name="frame" NavigationUIVisibility="Hidden"
     </Grid>
 </Window>
