--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,6 +8,6 @@
         Title="PermDynamics" Height="450" Width="800"
         MinHeight="450" MinWidth="800">
     <Grid>
-        <Frame x:Name="frame" NavigationUIVisibility="Hidden"
+        <Frame x:Name="frame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
